Update invitation details and add button

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Invitación | San Valentín</title>
 
-  <!-- Tip: si lo subes a hosting, esto se comparte bonito -->
-  <meta property="og:title" content="Paucita 💖 ¿me acompañas este 14?" />
+  <meta property="og:title" content="Paulina 💖 ¿me acompañas este 14?" />
   <meta property="og:description" content="Chapu + comida rica + noche de pintura en casa 🎨" />
 
   <link rel="stylesheet" href="styles.css" />
@@ -23,7 +22,7 @@
         <div class="tag">💌 Invitación • Sábado 14 de febrero • CDMX</div>
 
         <h1>
-          Paucita, ¿me acompañas a nuestro San Valentín?
+          Paulina, ¿me acompañas a nuestro San Valentín?
           <span class="heart">❤️</span>
         </h1>
 
@@ -34,12 +33,12 @@
 
         <div class="actions">
           <button class="primary" id="btnAccept">Aceptar la cita 💖</button>
-          
-         
+          <button id="btnPlan">Ver el plan</button>
         </div>
       </header>
 
-      <section class="grid" id="plan">
+      <!-- 👇 OJO: inicia oculto -->
+      <section class="grid is-hidden" id="plan" aria-hidden="true">
         <article class="card sm">
           <div class="kicker">🌳 1. Mañana</div>
           <div class="title">Paseo en Chapultepec</div>
@@ -100,12 +99,10 @@
       </section>
 
       <footer class="footer">
-        Hecho con amor para Paucita. Si dices que sí… yo pongo la música 😉
+        Hecho con amor para Paulina. Si dices que sí… yo pongo la música 😉
       </footer>
     </section>
   </main>
-
- 
 
   <script src="script.js"></script>
 </body>
