Update invitation details for San Valentín

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Invitación | San Valentín</title>
 
-  <meta property="og:title" content="Paulina 💖 ¿me acompañas este 14?" />
+  <meta property="og:title" content="Paucita 💖 ¿me acompañas este 14?" />
   <meta property="og:description" content="Chapu + comida rica + noche de pintura en casa 🎨" />
 
   <link rel="stylesheet" href="styles.css" />
@@ -22,7 +22,7 @@
         <div class="tag">💌 Invitación • Sábado 14 de febrero • CDMX</div>
 
         <h1>
-          Paulina, ¿me acompañas a nuestro San Valentín?
+          Paucita, ¿me acompañas a nuestro San Valentín?
           <span class="heart">❤️</span>
         </h1>
 
@@ -99,7 +99,7 @@
       </section>
 
       <footer class="footer">
-        Hecho con amor para Paulina. Si dices que sí… yo pongo la música 😉
+        Hecho con amor para Paucita. Si dices que sí… yo pongo la música 😉
       </footer>
     </section>
   </main>
