Update invitation details for San Valentín
Added a new item to the plan section for a walk with Casper.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
             <li>Caminata por el bosque</li>
             <li>Fotos bonitas</li>
             <li>Relax y vibra tranquila</li>
+            <li>Paseo con Casper </li>
           </ul>
           <div class="pillrow">
             <span class="pill">📍 Chapu</span>
             <span class="pill">📸 Fotitos</span>
             <span class="pill">☁️ Chill</span>
+            <span class="pill">🐶 Casper</span>
           </div>
         </article>
 
@@ -93,13 +95,13 @@
           <div class="pillrow">
             <span class="pill">👟 Cómodo</span>
             <span class="pill">🖤 Romántico</span>
-            <span class="pill">😎 Besos</span>
+            <span class="pill">😘 Besos</span>
           </div>
         </article>
       </section>
 
       <footer class="footer">
-        Hecho con amor para Paucita. Si dices que sí… yo pongo la música 😉
+        Hecho con amor para Paucita. Si dices que sí… yo pongo la música (HS 😁)
       </footer>
     </section>
   </main>
